@@ -6,6 +6,8 @@ Revision history for libev, a high-performance and full-featured event loop.
         - support EV_IDLE_ENABLE being disabled in ev++.h
           (patch by Didier Spezia).
         - point out the unspecified signal mask in the documentation.
+        - changed minimum glibc requirement from glibc 2.9 to 2.7, for
+          signalfd.
 
 3.8  Sun Aug  9 14:30:45 CEST 2009
 	- incompatible change: do not necessarily reset signal handler
